@@ -10,25 +10,21 @@ package com.twitter.finagle.stats
  *        blacklist, and false to let it pass through
  */
 class BlacklistStatsReceiver(
-    self: StatsReceiver,
+    protected val self: StatsReceiver,
     blacklisted: Seq[String] => Boolean)
-  extends StatsReceiver
-  with DelegatingStatsReceiver {
+  extends StatsReceiverProxy {
 
-  val repr = self.repr
-  override def isNull: Boolean = self.isNull
+  override def counter(name: String*): Counter =
+    getStatsReceiver(name).counter(name: _*)
 
-  def counter(name: String*): Counter = getStatsReceiver(name).counter(name: _*)
+  override def stat(name: String*): Stat =
+    getStatsReceiver(name).stat(name: _*)
 
-  def stat(name: String*): Stat = getStatsReceiver(name).stat(name: _*)
-
-  def addGauge(name: String*)(f: => Float): Gauge = getStatsReceiver(name).addGauge(name: _*)(f)
+  override def addGauge(name: String*)(f: => Float): Gauge =
+    getStatsReceiver(name).addGauge(name: _*)(f)
 
   private[this] def getStatsReceiver(name: Seq[String]): StatsReceiver =
     if (blacklisted(name)) NullStatsReceiver else self
 
-  override def toString: String =
-    s"BlacklistStatsReceiver($self)"
-
-  def underlying: Seq[StatsReceiver] = Seq(self)
+  override def toString: String = s"BlacklistStatsReceiver($self)"
 }
